# IDEAL-GENOM-QC

./: .gitignore  .readthedocs.yaml  Dockerfile  README.md  environment.yml  gwas_config_template.yaml  parameters.JSON  pipeline_config_template.yaml  pyproject.toml  requirements.txt
cge_comrare_pipeline/: AncestryQC.py  Helpers.py  PCA.py  SampleQC.py  UMAPplot.py  VariantQC.py  __main__.py
container/: Dockerfile
core/: cli.py  config.py  environment.py  executor.py  get_references.py  pipeline.py  utils.py
docs/source/: PopStructure.rst  UMAPplot.rst  conf.py  faq.rst  getting_started.rst  index.rst  installation.rst  troubleshooting.rst
ideal-genom-qc/: Helpers.py
ideal_genom/: __main__.py
ideal_genom/Utilities/: get_references.py
ideal_genom/core/: pipeline.py
ideal_genom/gwas/: __init__.py  gen_linear_mix_model.py  gen_linear_model.py  gwas_glmm.py  preparatory.py
ideal_genom/population/: fst_stats.py  projection.py
ideal_genom/post_imputation/: vcf_process.py  vcf_to_plink.py
ideal_genom/qc/: ancestry_qc.py  sample_qc.py  variant_qc.py
ideal_genom/utilities/: Helpers.py  annotations.py  get_references.py
ideal_genom_qc/: AncestryQC.py  Helpers.py  PopStructure.py  SampleQC.py  UMAPplot.py  VariantQC.py  __main__.py  get_examples.py  get_references.py
notebooks/: ancestry_qc.ipynb  interactivePipe.ipynb  sample_qc.ipynb  umap_plot.ipynb  variant_qc.ipynb
tests/: test.py  tests.ipynb
