[tool.poetry]
name = "cge-comrare-pipeline"
version = "0.1.0"
description = ""
authors = ["luisggon <luisggon@flyde.io>", "Amabel Tenghe <tenghe.amabel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scipy = "^1.12.0"
plink = "1.9"
conda-lock = "^2.5.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
